# ipython-pyspy

./: LICENSE  README.md  pyproject.toml
src/ipython_pyspy/: __init__.py
