[project]
name = "ipython-pyspy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alan Du", email = "alanhdu@gmail.com" }
]
dependencies = [
    "ipython>=8.0",
    "py-spy>=0.3.14",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ipython_pyspy"]
